Minor addings and fixes to the inventory and chest opener pages: - Added a new modal for quantity selection for the inventory page. - Connected the chest opener page to the inventory page. - Fixed some CSS issues in the inventory and XP calculator pages. - Fixed some JavaScript issues in the chest opener and inventory pages. - Added new JSON data for chests.

--- a/src/inventory.html
+++ b/src/inventory.html
@@ -114,6 +114,16 @@ Ajouter un Objet</button>
     </div>
   </div>
 </div>
+<div id="quantityModal" class="modal" style="display:none;">
+  <div class="modal-content quantity-modal-content">
+    <h2>Quantité</h2>
+    <input type="number" id="quantityInput" min="1" max="99" value="1" style="width:80px; font-size:1.2rem; text-align:center; margin: 20px 0;">
+    <div class="quantity-modal-actions">
+      <button class="add-btn" id="quantityConfirmBtn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-check-icon lucide-check"><path d="M20 6 9 17l-5-5"/></svg>Valider</button>
+      <button class="add-btn" id="quantityCancelBtn"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x-icon lucide-x"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>Annuler</button>
+    </div>
+  </div>
+</div>
 <div id="inventoryList"></div>
     <script src="assets/js/inventory.js"></script>
     <script src="assets/js/sidebar.js"></script>
