Major update : the character creation system - Added a new page for character creation - Added a new page for character management - Added a new CSS file for character creation styles - Added a new JavaScript file for character creation logic - Updated existing CSS files to accommodate new features - Updated existing JavaScript files to integrate with the new character creation system - Added new sound effects for character creation interactions - Currently updating the database.

--- a/src/inventory.html
+++ b/src/inventory.html
@@ -17,7 +17,8 @@
     </div>
     <div id="currencyDisplay" class="currency-display">
         <div class="currency-item">
-            <span id="walletAmountDisplay">0 💎</span>
+            <span id="walletAmountDisplay">0</span>
+            <img src="assets/images/icons/geolde_chrome.png" alt="Géolde" class="currency-icon">
         </div>
         <div class="currency-item">
             <span id="eclipseShardAmount">0</span>
